PySCF 1.7.? (2020-?-?)
----------------------
* Added
  - ADC (RADC and UADC)
  - Analytical nuclear gradients for state-average CASSCF


PySCF 1.7.6 (2020-10-03)
------------------------
* Improved
  - Threading safety


PySCF 1.7.5 (2020-9-27)
-----------------------
* Added
  - Upgrade cint library to v4.0.2
  - Upgrade xcfun library to v2.1.0
  - Kramers' restricted Dirac-Hartree-Fock, X2C, DHF-SOSCF
  - Heavy elements basis in MINAO
  - Coulomb integrals of short range part for attenuated Coulomb
  - Polarizability and hyperpolarizability under PBC
* Improved
  - Support pseudo potential Atomic HF
  - Atomic HF for 1-electron system
  - Check basis angular momentum in mol.intor (l < 7)
  - FCIDUMP wrapper fcidump.py
* Fixed
  - Bugs in Mole.fromstring
  - Buffer size bug in DHF JK builder for very small systems
  - Fix pbc-eom-eaccsd_star bug
  - Bugs in integral screening for very tight direct_scf_tol


PySCF 1.7.4 (2020-8-2)
----------------------
* Added
  - FCIDUMP reader to load FCIDUMP and generate custom system.
  - Natural orbitals occupations to mc.mo_occ
  - Supporting UHF orbitals in FCI factory function
* Improved
  - Linear dependency treatment for basis uncontraction
* Fixed
  - ECP gradients bug when the system contains two or more ecp atoms
  - CHGCAR writer
  - Basis parser for basis in Gaussian 94 format


PySCF 1.7.3 (2020-6-10)
-----------------------
* Added
  - CcECP basis
  - Spin 1RDM for shci
  - PM localization for charge populations based on Becke partition
* Improved
  - Compatibility of get_jk methods between mcscf class and scf class
  - CPPE interface
  - Interface between IAO and PM
* Fixed
  - an CCSD integral bug introduced in 1.7.1
  - Td as its subgroup C2v
  - Fix an error when calculating grad of dft method with "HF" as xc



PySCF 1.7.2 (2020-5-13)
-----------------------
* Added
  - pbc.eph
  - State-average CASSCF example
  - Spin density analysis to uhf.analyze()
  - Passing point group and wfnsym to Dice