@@ -105,9 +105,9 @@ Na ul
 2      7.9060270            -17.2283007        
 
 Na S
-0    243.3605846              3.0000000        
-1     41.5764759             36.2847626        
-2     13.2649167             72.9304880        
+0    243.3605846              3.0000000*1
+1     41.5764759             36.2847626*1
+2     13.2649167             72.9304880*1
 Na P
 0   1257.2650682              5.0000000        
 1    189.6248810            117.4495683        
